fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -552,7 +552,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #about img {
     max-width: 100%;
     transition: 1s;
-    padding: 30px 0;
+    padding: 0;
 }
 
 #about .owl-dots {
